<resources>
    <string name="app_name">MultiPOS</string>
    <string name="client_management"><u>Client management</u></string>
    <string name="dash">...................................................................................................................................................................................................................................................................................................</string>
    <string name="login_details">Login details</string>
    <string name="founder_login">Founder login</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="founder_password">Founder password</string>
    <string name="system_accounts">System accounts</string>
    <string name="pos_id">Pos ID</string>
    <string name="alias">Alias</string>
    <string name="enter_pos_alias">Enter Pos Alias</string>
    <string name="address">Address</string>
    <string name="enter_pos_address">Enter POS Address</string>
    <string name="password">Password</string>
    <string name="admin_password">Admin password</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_password">Repeat password</string>
    <string name="revert">Revert</string>
    <string name="next">Next</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="pos_details_description">Some details about POS system</string>
    <string name="account_description">Some details about money</string>
    <string name="payment_type_description">Some details about payment types</string>
    <string name="currency_description">Adding and change main currency</string>
    <string name="units_description">Units which used in system</string>
    <string name="employers_description">Who will work with this POS</string>
    <string name="registration_details">Registration details</string>
    <string name="organization_details">Organization details</string>
    <string name="organization_name">Organization name</string>
    <string name="email_with_star">Email*</string>
    <string name="organization_address">Organization Address</string>
    <string name="zip_code">Zip code</string>
    <string name="contacts">Contacts</string>
    <string name="enter_phone_number">enter phone number or e-mail</string>
    <string name="founder_login_details">Founder Login details</string>
    <string name="login_with_start">Login*</string>
    <string name="password_with_star">Password*</string>
    <string name="confirm_password_with_star">Confirm password*</string>
    <string name="mandatory_fields">* - mandatory fields</string>
    <string name="back">Back</string>
    <string name="access_token">Access token*</string>
    <string name="confirm">Confirm</string>
    <string name="enter_code_access_code">Enter code access code</string>
    <string name="enter_organization_email">Enter organization mail</string>
    <string name="email_">Email:</string>
    <string name="address_">Address</string>
    <string name="zip_code_">Zip Code</string>
    <string-array name="start_configuration_title">
        <item>POS details</item>
        <item>Account</item>
        <item>Payment type</item>
        <item>Currency</item>
        <item>Units</item>
        <item>Employers</item>
    </string-array>
    <string-array name="start_configuration_desctiption">
        <item>POS details</item>
        <item>Account</item>
        <item>Payment type</item>
        <item>Currency</item>
        <item>Units</item>
        <item>Employers</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_apply_configuration">Auto apply configuration</string>
    <string name="matrix_option">Matrix Option</string>
    <string name="name">Name</string>
    <string name="active">Active</string>
    <string name="actions">Actions</string>
    <string name="management_item_mode">Management Item Mode</string>
    <string name="tap_product_to_manage_it_info">Tap Product to manage it info</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="some_notes">Some notes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="product">Product</string>
    <string name="subcategory">SubCategory</string>
    <string name="creating_upsell_combos">Creating Upsell combos</string>
    <string name="add">Add</string>
    <string name="combo">Combo</string>
    <string name="sku_barcode">SKU, Barcode</string>
    <string name="add_customer">Add Customer</string>
</resources>
