<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">



        <LinearLayout
            android:background="@color/colorBackgroundGrey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:gravity="left"
                    android:text="@string/system_accounts"
                    android:textColor="@color/colorBlue"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="@string/pos_id"
                    android:textColor="@color/colorMainText"
                    android:textSize="16dp" />

                <com.jim.mpviews.MpEditText
                    android:layout_width="165dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:textColor="@color/colorMainText"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="@string/alias"
                    android:textColor="@color/colorMainText"
                    android:textSize="16dp" />

                <com.jim.mpviews.MpEditText
                    android:layout_width="400dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="left"
                    android:hint="@string/enter_pos_alias"
                    android:textColor="@color/colorMainText"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="@string/address"
                    android:textColor="@color/colorMainText"
                    android:textSize="16dp" />

                <com.jim.mpviews.MpEditText
                    android:layout_width="400dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="left"
                    android:hint="@string/enter_pos_address"
                    android:textColor="@color/colorMainText"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="@string/password"
                    android:textColor="@color/colorMainText"
                    android:textSize="16dp" />

                <com.jim.mpviews.MpEditText
                    android:layout_width="400dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="left"
                    android:hint="@string/admin_password"
                    android:textColor="@color/colorMainText"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="@string/repeat"
                    android:textColor="@color/colorMainText"
                    android:textSize="16dp" />

                <com.jim.mpviews.MpEditText
                    android:layout_width="400dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="left"
                    android:hint="@string/repeat_password"
                    android:textColor="@color/colorMainText"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|right"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingRight="20dp"
                >

                <com.jim.mpviews.MpButton
                    android:layout_width="180dp"
                    android:layout_height="70dp"
                    android:textSize="18dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/revert"
                    android:textColor="@color/colorMainText" />

                <com.jim.mpviews.MpButton
                    android:layout_width="180dp"
                    android:layout_height="70dp"
                    android:textSize="18dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/next"
                    android:textColor="@color/colorBlue" />

             </LinearLayout>

        </LinearLayout>

</LinearLayout>