<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="43"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/eighty_dp"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/ten_dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:text="@string/creating_upsell_combos"
                    android:textColor="@color/colorBlue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_product_to_manage_it_info"
                    android:textColor="@color/colorMainText" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_marginBottom="@dimen/twenty_five_dp"
                android:background="@color/colorTextHint" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/thirty_five_dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/hundred_forty_five_dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/eighteen_dp"
                    android:gravity="right"
                    android:text="@string/combo"
                    android:textColor="@color/colorMainText"
                    android:textSize="@dimen/eighteen_dp" />

                <com.jim.mpviews.MpEditText
                    android:layout_width="0dp"
                    android:layout_height="@dimen/forty_dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/name"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/eighteen_dp" />

                <ImageView
                    android:layout_width="@dimen/thirty_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/eighteen_dp"
                    android:layout_marginRight="@dimen/thirty_dp"
                    android:src="@drawable/camera"
                    android:tint="@color/colorTintGrey" />

            </LinearLayout>


            <TextView
                android:layout_width="@dimen/hundred_forty_five_dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/five_dp"
                android:layout_marginRight="@dimen/eighteen_dp"
                android:gravity="right"
                android:text="@string/product"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/eighteen_dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="@dimen/twenty_five_dp"
                android:layout_marginLeft="@dimen/eighty_dp"
                android:layout_marginRight="@dimen/thirty_dp"
                android:background="#e4e4e4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ten_dp"
                android:layout_marginLeft="@dimen/eighty_dp"
                android:orientation="horizontal">


                <com.jim.mpviews.MpEditText
                    android:layout_width="0dp"
                    android:layout_height="@dimen/forty_dp"
                    android:layout_weight="1"
                    android:drawableTint="@color/colorTintGrey"
                    android:hint="@string/sku_barcode"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/eighteen_dp" />


                <com.jim.mpviews.MpEditText
                    android:layout_width="0dp"
                    android:layout_height="@dimen/forty_dp"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_weight="1"
                    android:hint="Difference price"
                    android:textColorHint="@color/colorTintGrey"
                    android:textSize="@dimen/eighteen_dp" />

                <ImageView
                    android:layout_width="@dimen/twenty_five_dp"
                    android:layout_height="@dimen/twenty_five_dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/eighteen_dp"
                    android:layout_marginRight="@dimen/thirty_dp"
                    android:src="@drawable/add_round" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/thirty_five_dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.jim.mpviews.MpButton
                android:layout_width="@dimen/hundred_eighty_dp"
                android:layout_height="@dimen/seventy_dp"
                android:layout_marginRight="@dimen/thirty_dp"
                android:text="@string/cancel"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/eighteen_dp" />

            <com.jim.mpviews.MpButton
                android:layout_width="@dimen/hundred_eighty_dp"
                android:layout_height="@dimen/seventy_dp"
                android:layout_marginRight="@dimen/thirty_dp"
                android:text="@string/save"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/eighteen_dp" />

            <com.jim.mpviews.MpButton
                android:layout_width="@dimen/hundred_eighty_dp"
                android:layout_height="@dimen/seventy_dp"
                android:layout_marginRight="@dimen/thirty_dp"
                android:text="@string/add"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/eighteen_dp" />

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>